# hospital-assistant

./: .gitignore  CHAT_VOICE_FEATURE.md  CLERK_SETUP.md  DEPLOYMENT.md  GEMINI_SETUP.md  Procfile  README.md  render.yaml  vercel.json
backend/: .gitignore  README.md  main.py  pyproject.toml  test_auth_setup.py  test_chat.py  verify_booking_fix.py
backend/api/: server.py
backend/config/: __init__.py  doctors.py  prompts.py  settings.py
backend/data/: Knowledgebase.txt  appointments.json
backend/rag/: README.md  __init__.py  config.py  embeddings.py  requirements.txt  retriever.py  utils.py  vector_store.py
backend/scripts/: test_rag.py  upload_embeddings.py  upload_embeddings_gemini.py
backend/services/: __init__.py  appointment_service.py  auth_service.py  chat_service.py  rag_service.py  token_service.py
backend/voice-agent/: agent.py  query_engine.py  requirements.txt  test_rag_function.py
frontend/: FRONTEND_README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
next_frontend/: README_SETUP.md  package-lock.json  package.json
next_frontend/app/: globals.css  layout.tsx  page.tsx
next_frontend/app/appointments/: page.tsx
next_frontend/app/book/: page.tsx
next_frontend/app/components/: CalendarBooking.tsx  ChatAssistant.tsx  DoctorNav.tsx  DoctorRedirect.tsx  VoiceAssistant.tsx
next_frontend/app/doctor/: page.tsx
