[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[openai,silero,turn-detector]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.2.1",
    "llama-index>=0.11.0",
    "llama-index-embeddings-openai>=0.2.0",
    "llama-index-vector-stores-pinecone>=0.2.0",
    "pinecone>=5.0.0",
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "livekit>=0.11.0",
]
