[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[openai,silero,turn-detector,google,groq,cartesia]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-google>=1.2.18",
    "livekit-plugins-groq>=0.1.0",
    "python-dotenv>=1.2.1",
    "llama-index>=0.11.0",
    "llama-index-embeddings-openai>=0.2.0",
    "llama-index-embeddings-together>=0.2.0",
    "llama-index-embeddings-gemini>=0.2.0",
    "llama-index-llms-groq>=0.2.0",
    "llama-index-vector-stores-pinecone>=0.2.0",
    "pinecone>=5.0.0",
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "livekit>=1.0.0,<2.0.0",
    "groq>=0.4.0",
    "google-generativeai>=0.3.0",
    "httpx>=0.28.1",
]
